# when3meet

./: .gitignore  Cargo.toml  README.md  package-lock.json  todos.db
.github/workflows/: audit.yml  backend.yml  frontend.yml  general.yml  security_audit.yml
backend/: .env  Cargo.toml
backend/.sqlx/: query-04a1b18a929f9315dd0185aa76b8f84eaf46da9abfa1580a91e3373b77659da1.json  query-3042b4b287d4a6c668ca32ac4de7054246796191e9b5d0e7c8a4dbe080b026ab.json  query-600dfcbd023a39a945cdaac929dd0896706122a360c62ae6a4986ed65d5c2b2c.json  query-9c3bc70ad4ed9fdc5b13e23d5054de07761c5dd8cc15f9db73d0726551a10788.json  query-c73fb434044f34db19eb7396a019d6afa5f7cef930a771f506c8685f9c62b768.json  query-dcf5bdea44bc531138bb45e93473df4ef7665246409e520fd178ad79961a1bf7.json  query-e5835631d1b9344e68e067d07656b3c46beebfa90a3e03de1d65f7462892cd86.json
backend/configuration/: base.yml
backend/migrations/: 20231129211642_init_db.sql
backend/scripts/: init_db.sh
backend/src/: lib.rs  main.rs  startup.rs  telemetry.rs
backend/src/model/: availability.rs  db_meeting.rs  insert_meeting.rs  insert_user.rs  meeting.rs  mod.rs  safe_string.rs  slot.rs  time_range.rs  time_utils.rs  timestamp.rs  user.rs
backend/src/routes/: mod.rs  utils.rs
backend/src/routes/meeting/: create.rs  mod.rs  read.rs
backend/src/routes/user/: body.rs  create.rs  mod.rs  update.rs
backend/src/transactions/: meeting.rs  mod.rs  user.rs
backend/tests/api/: helpers.rs
configuration/: base.yml
frontend/: eslintrc.cjs  package-lock.json  package.json  tsconfig.json
frontend/src/: entry-server.tsx  main.types.ts  root.tsx
frontend/src/components/: createMeeting.tsx  meeting.tsx
frontend/src/routes/: [...404].tsx  [id].tsx  index.tsx
migrations/: 20231129211642_init.sql  20231129211642_init_db.sql  init_todos.sql
scripts/: init_db.sh
src/: app.rs  configuration.rs  lib.rs  main.rs  startup.rs  todo.rs
src/components/: app.rs
src/model/: dbmeeting.rs  meeting.rs  mod.rs  safe_string.rs  slot.rs  time_strings.rs  timestamp.rs  user.rs
src/server/: db.rs  meeting.rs  mod.rs
